<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MicroMediaPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="stop">Stop</string>
    <string name="desired_bpm">Desired BPM:</string>
    <string name="init_song">No song currently playing...</string>
    <string name="init_bpm">BPM: 0</string>
    <string name="bt_on">BT on</string>
    <string name="bt_off">BT off</string>
    <string name="paired_devices">Pair</string>
    

</resources>
